// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EditContact component should render correctly when is a new contact 1`] = `
<div
  className="css-view-g5y9jx r-backgroundColor-14lw9ot r-borderColor-xld3ed r-borderRadius-z2wwpe r-borderStyle-1phboty r-borderWidth-rs99b7 r-boxShadow-qmdso3 r-flex-13awgt0 r-marginBottom-1ifxtd0 r-marginLeft-1nkf79l r-marginRight-xzortm"
  dir={null}
>
  <div
    className="css-view-g5y9jx r-overflow-1udh08x"
    dir={null}
  >
    <div
      className="css-view-g5y9jx r-left-1nx5cyr r-margin-crgep1 r-padding-t60dpp r-position-u8s1d r-top-1s7wq8y"
      dir={null}
    >
      <div
        className="css-view-g5y9jx"
        dir={null}
      >
        <div
          className="css-text-146c3p1"
          dir="auto"
          style={
            Object {
              "color": "rgba(0,127,255,1.00)",
              "fontFamily": "alldone",
              "fontSize": "24px",
              "opacity": 1,
            }
          }
        >
          
        </div>
      </div>
    </div>
    <CustomTextInput3
      autoFocus={true}
      containerStyle={
        Array [
          Object {
            "borderTopLeftRadius": 4,
            "borderTopRightRadius": 4,
            "color": "#04142F",
            "fontFamily": "Roboto-Regular",
            "fontSize": 16,
            "letterSpacing": 0.32,
            "lineHeight": 24,
            "marginLeft": 52,
            "paddingBottom": 12,
            "paddingLeft": 20,
            "paddingRight": 16,
            "paddingTop": 14,
            "textAlignVertical": "top",
          },
          undefined,
        ]
      }
      disabledEdition={false}
      fixedHeight={62}
      forceTriggerEnterActionForBreakLines={[Function]}
      initialTextExtended=""
      multiline={false}
      numberOfLines={1}
      onChangeText={[Function]}
      placeholder="Type email or name to add person"
      placeholderTextColor="#8A94A6"
      returnKeyType="done"
    />
  </div>
  <div
    className="css-view-g5y9jx r-backgroundColor-1o3jrms r-borderStyle-1phboty r-borderTopColor-1h5c48e r-borderTopWidth-5kkj8d r-flex-13awgt0 r-flexDirection-18u37iz r-paddingBlock-11f147o r-paddingInline-1ezpcd1"
    dir={null}
  >
    <div
      className="css-view-g5y9jx r-flexDirection-18u37iz r-flexGrow-16y2uox"
      dir={null}
    >
      <div
        className="css-view-g5y9jx"
        dir={null}
        style={
          Object {
            "marginRight": "32px",
          }
        }
      >
        <div
          aria-disabled={true}
          className="css-view-g5y9jx r-transitionProperty-1i6wzkk r-userSelect-lrvibr r-alignItems-1awozwy r-alignSelf-k200y r-borderRadius-z2wwpe r-flexDirection-18u37iz r-flexWrap-tzz3ar r-height-eu3ka r-justifyContent-1777fci r-maxHeight-yca7ao r-minHeight-ero68b r-paddingBlock-11f147o r-paddingLeft-f727ji r-paddingRight-i023vh r-backgroundColor-1uxh0fu r-opacity-icoktb r-pointerEvents-12vffkv"
          dir={null}
          onClick={[Function]}
          onContextMenu={[Function]}
          onKeyDown={[Function]}
          style={
            Object {
              "marginLeft": "2px",
              "marginRight": "2px",
              "transitionDuration": "0s",
            }
          }
          tabIndex="-1"
        >
          <div
            className="css-view-g5y9jx"
            dir={null}
          >
            <div
              className="css-text-146c3p1"
              dir="auto"
              style={
                Object {
                  "color": "rgba(138,148,166,1.00)",
                  "fontFamily": "alldone",
                  "fontSize": "24px",
                  "opacity": 1,
                }
              }
            >
              
            </div>
          </div>
          <div
            className="css-text-146c3p1 r-maxWidth-dnmrzs r-overflow-1udh08x r-textOverflow-1udbk01 r-whiteSpace-3s2u2q r-wordWrap-1iln25a r-alignSelf-1kihuf0 r-flexWrap-tzz3ar r-fontFamily-1k9400p r-fontSize-1b43r93 r-letterSpacing-1smd7e2 r-lineHeight-1cwl3u0 r-margin-crgep1 r-paddingBlock-1mkv55d r-paddingInline-1e084wi r-color-qmo3aw"
            dir="auto"
            style={
              Object {
                "marginLeft": "12px",
              }
            }
          >
            Open
          </div>
        </div>
      </div>
      <div
        aria-disabled={true}
        className="css-view-g5y9jx r-transitionProperty-1i6wzkk r-userSelect-lrvibr r-alignItems-1awozwy r-alignSelf-k200y r-borderRadius-z2wwpe r-flexDirection-18u37iz r-flexWrap-tzz3ar r-height-eu3ka r-justifyContent-1777fci r-maxHeight-yca7ao r-minHeight-ero68b r-paddingBlock-11f147o r-paddingLeft-f727ji r-paddingRight-i023vh r-backgroundColor-1niwhzg r-borderColor-ql2gnw r-borderStyle-1phboty r-borderWidth-rs99b7 r-opacity-icoktb r-pointerEvents-12vffkv"
        dir={null}
        onClick={[Function]}
        onContextMenu={[Function]}
        onKeyDown={[Function]}
        style={
          Object {
            "marginLeft": "2px",
            "marginRight": "2px",
            "transitionDuration": "0s",
          }
        }
        tabIndex="-1"
      >
        <div
          className="css-view-g5y9jx"
          dir={null}
        >
          <div
            className="css-text-146c3p1"
            dir="auto"
            style={
              Object {
                "color": "rgba(138,148,166,1.00)",
                "fontFamily": "alldone",
                "fontSize": "24px",
                "opacity": 1,
              }
            }
          >
            
          </div>
        </div>
        <div
          className="css-text-146c3p1 r-maxWidth-dnmrzs r-overflow-1udh08x r-textOverflow-1udbk01 r-whiteSpace-3s2u2q r-wordWrap-1iln25a r-alignSelf-1kihuf0 r-flexWrap-tzz3ar r-fontFamily-1k9400p r-fontSize-1b43r93 r-letterSpacing-1smd7e2 r-lineHeight-1cwl3u0 r-margin-crgep1 r-paddingBlock-1mkv55d r-paddingInline-1e084wi r-color-hiecfz"
          dir="auto"
          style={
            Object {
              "marginLeft": "12px",
            }
          }
        >
          Info
        </div>
      </div>
      <div
        aria-disabled={true}
        className="css-view-g5y9jx r-transitionProperty-1i6wzkk r-userSelect-lrvibr r-alignItems-1awozwy r-alignSelf-k200y r-borderRadius-z2wwpe r-flexDirection-18u37iz r-flexWrap-tzz3ar r-height-eu3ka r-justifyContent-1777fci r-maxHeight-yca7ao r-minHeight-ero68b r-paddingBlock-11f147o r-paddingLeft-f727ji r-paddingRight-i023vh r-backgroundColor-1niwhzg r-borderColor-ql2gnw r-borderStyle-1phboty r-borderWidth-rs99b7 r-opacity-icoktb r-pointerEvents-12vffkv"
        dir={null}
        onClick={[Function]}
        onContextMenu={[Function]}
        onKeyDown={[Function]}
        style={
          Object {
            "marginLeft": "2px",
            "marginRight": "2px",
            "transitionDuration": "0s",
          }
        }
        tabIndex="-1"
      >
        <div
          className="css-view-g5y9jx"
          dir={null}
        >
          <div
            className="css-text-146c3p1"
            dir="auto"
            style={
              Object {
                "color": "rgba(138,148,166,1.00)",
                "fontFamily": "alldone",
                "fontSize": "24px",
                "opacity": 1,
              }
            }
          >
            
          </div>
        </div>
        <div
          className="css-text-146c3p1 r-maxWidth-dnmrzs r-overflow-1udh08x r-textOverflow-1udbk01 r-whiteSpace-3s2u2q r-wordWrap-1iln25a r-alignSelf-1kihuf0 r-flexWrap-tzz3ar r-fontFamily-1k9400p r-fontSize-1b43r93 r-letterSpacing-1smd7e2 r-lineHeight-1cwl3u0 r-margin-crgep1 r-paddingBlock-1mkv55d r-paddingInline-1e084wi r-color-hiecfz"
          dir="auto"
          style={
            Object {
              "marginLeft": "12px",
            }
          }
        >
          Picture
        </div>
      </div>
      <div
        aria-disabled={true}
        className="css-view-g5y9jx r-transitionProperty-1i6wzkk r-userSelect-lrvibr r-alignItems-1awozwy r-alignSelf-k200y r-borderRadius-z2wwpe r-flexDirection-18u37iz r-flexWrap-tzz3ar r-height-eu3ka r-justifyContent-1777fci r-maxHeight-yca7ao r-minHeight-ero68b r-paddingBlock-11f147o r-paddingLeft-f727ji r-paddingRight-i023vh r-backgroundColor-1niwhzg r-borderColor-ql2gnw r-borderStyle-1phboty r-borderWidth-rs99b7 r-opacity-icoktb r-pointerEvents-12vffkv"
        dir={null}
        onClick={[Function]}
        onContextMenu={[Function]}
        onKeyDown={[Function]}
        style={
          Object {
            "marginLeft": "2px",
            "marginRight": "2px",
            "transitionDuration": "0s",
          }
        }
        tabIndex="-1"
      >
        <div
          className="css-view-g5y9jx"
          dir={null}
        >
          <div
            className="css-text-146c3p1"
            dir="auto"
            style={
              Object {
                "color": "rgba(138,148,166,1.00)",
                "fontFamily": "alldone",
                "fontSize": "24px",
                "opacity": 1,
              }
            }
          >
            
          </div>
        </div>
        <div
          className="css-text-146c3p1 r-maxWidth-dnmrzs r-overflow-1udh08x r-textOverflow-1udbk01 r-whiteSpace-3s2u2q r-wordWrap-1iln25a r-alignSelf-1kihuf0 r-flexWrap-tzz3ar r-fontFamily-1k9400p r-fontSize-1b43r93 r-letterSpacing-1smd7e2 r-lineHeight-1cwl3u0 r-margin-crgep1 r-paddingBlock-1mkv55d r-paddingInline-1e084wi r-color-hiecfz"
          dir="auto"
          style={
            Object {
              "marginLeft": "12px",
            }
          }
        >
          Project-wide
        </div>
      </div>
      <div
        aria-disabled={true}
        className="css-view-g5y9jx r-transitionProperty-1i6wzkk r-userSelect-lrvibr r-alignItems-1awozwy r-alignSelf-k200y r-borderRadius-z2wwpe r-flexDirection-18u37iz r-flexWrap-tzz3ar r-height-eu3ka r-justifyContent-1777fci r-maxHeight-yca7ao r-minHeight-ero68b r-paddingBlock-11f147o r-paddingLeft-f727ji r-paddingRight-i023vh r-backgroundColor-1niwhzg r-borderColor-ql2gnw r-borderStyle-1phboty r-borderWidth-rs99b7 r-opacity-icoktb r-pointerEvents-12vffkv"
        dir={null}
        onClick={[Function]}
        onContextMenu={[Function]}
        onKeyDown={[Function]}
        style={
          Object {
            "marginLeft": "2px",
            "marginRight": "2px",
            "transitionDuration": "0s",
          }
        }
        tabIndex="-1"
      >
        <div
          className="css-view-g5y9jx"
          dir={null}
        >
          <div
            className="css-text-146c3p1"
            dir="auto"
            style={
              Object {
                "color": "rgba(138,148,166,1.00)",
                "fontFamily": "alldone",
                "fontSize": "24px",
                "opacity": 1,
              }
            }
          >
            
          </div>
        </div>
        <div
          className="css-text-146c3p1 r-maxWidth-dnmrzs r-overflow-1udh08x r-textOverflow-1udbk01 r-whiteSpace-3s2u2q r-wordWrap-1iln25a r-alignSelf-1kihuf0 r-flexWrap-tzz3ar r-fontFamily-1k9400p r-fontSize-1b43r93 r-letterSpacing-1smd7e2 r-lineHeight-1cwl3u0 r-margin-crgep1 r-paddingBlock-1mkv55d r-paddingInline-1e084wi r-color-hiecfz"
          dir="auto"
          style={
            Object {
              "marginLeft": "12px",
            }
          }
        >
          None
        </div>
      </div>
      <div
        className="css-view-g5y9jx"
        dir={null}
      >
        <div
          aria-disabled={true}
          className="css-view-g5y9jx r-transitionProperty-1i6wzkk r-userSelect-lrvibr r-alignItems-1awozwy r-alignSelf-k200y r-borderRadius-z2wwpe r-flexDirection-18u37iz r-flexWrap-tzz3ar r-height-eu3ka r-justifyContent-1777fci r-maxHeight-yca7ao r-minHeight-ero68b r-paddingBlock-11f147o r-backgroundColor-1niwhzg r-borderColor-ql2gnw r-borderStyle-1phboty r-borderWidth-rs99b7 r-opacity-icoktb r-paddingLeft-1m04atk r-paddingRight-1pyaxff r-pointerEvents-12vffkv"
          dir={null}
          onClick={[Function]}
          onContextMenu={[Function]}
          onKeyDown={[Function]}
          style={
            Object {
              "marginLeft": "2px",
              "marginRight": "2px",
              "transitionDuration": "0s",
            }
          }
          tabIndex="-1"
        >
          <div
            className="css-view-g5y9jx"
            dir={null}
          >
            <div
              className="css-text-146c3p1"
              dir="auto"
              style={
                Object {
                  "color": "rgba(138,148,166,1.00)",
                  "fontFamily": "alldone",
                  "fontSize": "24px",
                  "opacity": 1,
                }
              }
            >
              
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="css-view-g5y9jx r-flexDirection-18u37iz r-flexGrow-16y2uox r-justifyContent-17s6mgv"
      dir={null}
    >
      <div
        className="css-view-g5y9jx r-transitionProperty-1i6wzkk r-userSelect-lrvibr r-cursor-1loqt21 r-touchAction-1otgn73 r-alignItems-1awozwy r-alignSelf-k200y r-borderRadius-z2wwpe r-flexDirection-18u37iz r-flexWrap-tzz3ar r-height-eu3ka r-justifyContent-1777fci r-maxHeight-yca7ao r-minHeight-ero68b r-paddingBlock-11f147o r-backgroundColor-1uxh0fu r-paddingLeft-1qhn6m8 r-paddingRight-i023vh"
        dir={null}
        onClick={[Function]}
        onContextMenu={[Function]}
        onKeyDown={[Function]}
        style={
          Object {
            "marginLeft": "4px",
            "marginRight": "4px",
            "transitionDuration": "0s",
          }
        }
        tabIndex="0"
      >
        <div
          className="css-text-146c3p1 r-maxWidth-dnmrzs r-overflow-1udh08x r-textOverflow-1udbk01 r-whiteSpace-3s2u2q r-wordWrap-1iln25a r-alignSelf-1kihuf0 r-flexWrap-tzz3ar r-fontFamily-1k9400p r-fontSize-1b43r93 r-letterSpacing-1smd7e2 r-lineHeight-1cwl3u0 r-margin-crgep1 r-paddingBlock-1mkv55d r-paddingInline-1e084wi r-color-qmo3aw"
          dir="auto"
          style={
            Object {
              "marginLeft": "0px",
            }
          }
        >
          Cancel
        </div>
      </div>
      <div
        className="css-view-g5y9jx r-transitionProperty-1i6wzkk r-userSelect-lrvibr r-cursor-1loqt21 r-touchAction-1otgn73 r-alignItems-1awozwy r-alignSelf-k200y r-borderRadius-z2wwpe r-flexDirection-18u37iz r-flexWrap-tzz3ar r-height-eu3ka r-justifyContent-1777fci r-maxHeight-yca7ao r-minHeight-ero68b r-paddingBlock-11f147o r-backgroundColor-t6fudj r-paddingLeft-1qhn6m8 r-paddingRight-i023vh"
        dir={null}
        onClick={[Function]}
        onContextMenu={[Function]}
        onKeyDown={[Function]}
        style={
          Object {
            "transitionDuration": "0s",
          }
        }
        tabIndex="0"
      >
        <div
          className="css-text-146c3p1 r-maxWidth-dnmrzs r-overflow-1udh08x r-textOverflow-1udbk01 r-whiteSpace-3s2u2q r-wordWrap-1iln25a r-alignSelf-1kihuf0 r-flexWrap-tzz3ar r-fontFamily-1k9400p r-fontSize-1b43r93 r-letterSpacing-1smd7e2 r-lineHeight-1cwl3u0 r-margin-crgep1 r-paddingBlock-1mkv55d r-paddingInline-1e084wi r-color-jwli3a"
          dir="auto"
          style={
            Object {
              "marginLeft": "0px",
            }
          }
        >
          Ok
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`EditContact component should render correctly when is not a new contact 1`] = `
<div
  className="css-view-g5y9jx r-backgroundColor-14lw9ot r-borderColor-xld3ed r-borderRadius-z2wwpe r-borderStyle-1phboty r-borderWidth-rs99b7 r-boxShadow-qmdso3 r-flex-13awgt0 r-marginBottom-1ifxtd0 r-marginLeft-1nkf79l r-marginRight-xzortm"
  dir={null}
>
  <div
    className="css-view-g5y9jx r-overflow-1udh08x"
    dir={null}
  >
    <div
      className="css-view-g5y9jx r-margin-crgep1 r-padding-t60dpp r-position-u8s1d"
      dir={null}
      style={
        Object {
          "left": "15px",
          "top": "7px",
        }
      }
    >
      <div
        className="css-view-g5y9jx r-borderRadius-18c69zk r-height-h3s6tt r-overflow-1udh08x r-width-rwqe4o"
        dir={null}
      >
        <svg
          height={48}
          style={
            Object {
              "overflowX": "visible",
              "overflowY": "visible",
            }
          }
          svgid="ci_p_undefined_undefined"
          viewBox="0 0 343.958 343.958"
          width={48}
        >
          <defs>
            <linearGradient
              id="ci_p_undefined_undefinedprefix__c"
            >
              <stop
                offset={0}
                stopColor="#0884ff"
              />
              <stop
                offset={0.271}
                stopColor="#5fafff"
              />
              <stop
                offset={1}
                stopColor="#d9ecff"
              />
            </linearGradient>
            <linearGradient
              id="ci_p_undefined_undefinedprefix__b"
            >
              <stop
                offset={0}
                stopColor="#c0e0ff"
              />
              <stop
                offset={0.705}
                stopColor="#82c0ff"
              />
              <stop
                offset={1}
                stopColor="#4da6ff"
              />
            </linearGradient>
            <linearGradient
              id="ci_p_undefined_undefinedprefix__a"
            >
              <stop
                offset={0}
                stopColor="#65b2ff"
              />
              <stop
                offset={1}
                stopColor="#d9ecff"
              />
            </linearGradient>
            <radialGradient
              cx={307.173}
              cy={102.456}
              fx={307.173}
              fy={102.456}
              gradientTransform="scale(-2.6301) rotate(-45 -47.829 560.521)"
              gradientUnits="userSpaceOnUse"
              id="ci_p_undefined_undefinedprefix__e"
              r={61.434}
              xlinkHref="#ci_p_undefined_undefinedprefix__b"
            />
            <radialGradient
              cx={647.026}
              cy={589.924}
              fx={647.026}
              fy={589.924}
              gradientTransform="rotate(135 787.986 738.732) scale(1.39542 1.39543)"
              gradientUnits="userSpaceOnUse"
              id="ci_p_undefined_undefinedprefix__d"
              r={547.021}
              xlinkHref="#ci_p_undefined_undefinedprefix__c"
            />
          </defs>
          <g
            transform="translate(-146.277 4.158)"
          >
            <rect
              fill="#e7ecef"
              height={343.958}
              ry={1}
              width={343.958}
              x={146.277}
              y={-4.158}
            />
            <path
              d="M647.025 674.781L505.076 696.5l5.557 124.754c2.673 60.035-34.896 96.585-85.863 123.238-73.407 38.388-141.01 42.63-217.688 72.768-54.044 21.242-107.076 81.064-107.076 154.387V1300h1094.04v-128.353c0-73.323-53.031-133.145-107.075-154.387-76.68-30.139-144.282-34.38-217.688-72.768-50.967-26.653-88.537-63.203-85.863-123.238l5.557-124.754z"
              fill="url(#ci_p_undefined_undefinedprefix__d)"
              transform="matrix(.26458 0 0 .26458 146.277 -4.158)"
            />
            <path
              d="M317.469 37.885c-17.27 0-32.538 2.566-46.52 15.896-8.9 8.485-13.283 20.62-13.838 33.368-.49 11.266 1.726 21.229 3.36 31.774h.007c-2.47.93-4.057 3.436-4.322 6.104-.548 5.529.868 12.494 2.08 17.385 1.644 6.63 5.33 15.219 11.21 18.435 3.504 15.13 8.366 24.986 16.51 35.427 7.844 10.057 20.703 17.471 31.513 17.471 10.81 0 23.668-7.414 31.513-17.471 8.144-10.44 13.005-20.297 16.51-35.427 5.879-3.216 9.566-11.804 11.21-18.435 1.212-4.891 2.627-11.856 2.08-17.385-.265-2.668-1.853-5.173-4.322-6.104h.006c1.634-10.545 3.85-20.508 3.36-31.774-.554-12.748-4.938-24.883-13.837-33.368-13.982-13.33-29.25-15.896-46.52-15.896z"
              fill="url(#ci_p_undefined_undefinedprefix__e)"
              style={
                Object {
                  "fontVariationSettings": "normal",
                }
              }
            />
          </g>
        </svg>
      </div>
    </div>
    <CustomTextInput3
      autoFocus={true}
      containerStyle={
        Array [
          Object {
            "borderTopLeftRadius": 4,
            "borderTopRightRadius": 4,
            "color": "#04142F",
            "fontFamily": "Roboto-Regular",
            "fontSize": 16,
            "letterSpacing": 0.32,
            "lineHeight": 24,
            "marginLeft": 52,
            "paddingBottom": 12,
            "paddingLeft": 20,
            "paddingRight": 16,
            "paddingTop": 14,
            "textAlignVertical": "top",
          },
          undefined,
        ]
      }
      disabledEdition={false}
      fixedHeight={62}
      forceTriggerEnterActionForBreakLines={[Function]}
      multiline={false}
      numberOfLines={1}
      onChangeText={[Function]}
      onMentionSelected={[Function]}
      placeholder="Type email or name to add person"
      placeholderTextColor="#8A94A6"
      returnKeyType="done"
    />
  </div>
  <div
    className="css-view-g5y9jx r-backgroundColor-1o3jrms r-borderStyle-1phboty r-borderTopColor-1h5c48e r-borderTopWidth-5kkj8d r-flex-13awgt0 r-flexDirection-18u37iz r-paddingBlock-11f147o r-paddingInline-1ezpcd1"
    dir={null}
  >
    <div
      className="css-view-g5y9jx r-flexDirection-18u37iz r-flexGrow-16y2uox"
      dir={null}
    >
      <div
        className="css-view-g5y9jx"
        dir={null}
        style={
          Object {
            "marginRight": "32px",
          }
        }
      >
        <div
          className="css-view-g5y9jx r-transitionProperty-1i6wzkk r-userSelect-lrvibr r-cursor-1loqt21 r-touchAction-1otgn73 r-alignItems-1awozwy r-alignSelf-k200y r-borderRadius-z2wwpe r-flexDirection-18u37iz r-flexWrap-tzz3ar r-height-eu3ka r-justifyContent-1777fci r-maxHeight-yca7ao r-minHeight-ero68b r-paddingBlock-11f147o r-paddingLeft-f727ji r-paddingRight-i023vh r-backgroundColor-1uxh0fu"
          dir={null}
          onClick={[Function]}
          onContextMenu={[Function]}
          onKeyDown={[Function]}
          style={
            Object {
              "marginLeft": "2px",
              "marginRight": "2px",
              "transitionDuration": "0s",
            }
          }
          tabIndex="0"
        >
          <div
            className="css-view-g5y9jx"
            dir={null}
          >
            <div
              className="css-text-146c3p1"
              dir="auto"
              style={
                Object {
                  "color": "rgba(138,148,166,1.00)",
                  "fontFamily": "alldone",
                  "fontSize": "24px",
                  "opacity": 1,
                }
              }
            >
              
            </div>
          </div>
          <div
            className="css-text-146c3p1 r-maxWidth-dnmrzs r-overflow-1udh08x r-textOverflow-1udbk01 r-whiteSpace-3s2u2q r-wordWrap-1iln25a r-alignSelf-1kihuf0 r-flexWrap-tzz3ar r-fontFamily-1k9400p r-fontSize-1b43r93 r-letterSpacing-1smd7e2 r-lineHeight-1cwl3u0 r-margin-crgep1 r-paddingBlock-1mkv55d r-paddingInline-1e084wi r-color-qmo3aw"
            dir="auto"
            style={
              Object {
                "marginLeft": "12px",
              }
            }
          >
            Open
          </div>
        </div>
      </div>
      <div
        className="css-view-g5y9jx r-transitionProperty-1i6wzkk r-userSelect-lrvibr r-cursor-1loqt21 r-touchAction-1otgn73 r-alignItems-1awozwy r-alignSelf-k200y r-borderRadius-z2wwpe r-flexDirection-18u37iz r-flexWrap-tzz3ar r-height-eu3ka r-justifyContent-1777fci r-maxHeight-yca7ao r-minHeight-ero68b r-paddingBlock-11f147o r-paddingLeft-f727ji r-paddingRight-i023vh r-backgroundColor-1niwhzg r-borderColor-ql2gnw r-borderStyle-1phboty r-borderWidth-rs99b7"
        dir={null}
        onClick={[Function]}
        onContextMenu={[Function]}
        onKeyDown={[Function]}
        style={
          Object {
            "marginLeft": "2px",
            "marginRight": "2px",
            "transitionDuration": "0s",
          }
        }
        tabIndex="0"
      >
        <div
          className="css-view-g5y9jx"
          dir={null}
        >
          <div
            className="css-text-146c3p1"
            dir="auto"
            style={
              Object {
                "color": "rgba(138,148,166,1.00)",
                "fontFamily": "alldone",
                "fontSize": "24px",
                "opacity": 1,
              }
            }
          >
            
          </div>
        </div>
        <div
          className="css-text-146c3p1 r-maxWidth-dnmrzs r-overflow-1udh08x r-textOverflow-1udbk01 r-whiteSpace-3s2u2q r-wordWrap-1iln25a r-alignSelf-1kihuf0 r-flexWrap-tzz3ar r-fontFamily-1k9400p r-fontSize-1b43r93 r-letterSpacing-1smd7e2 r-lineHeight-1cwl3u0 r-margin-crgep1 r-paddingBlock-1mkv55d r-paddingInline-1e084wi r-color-hiecfz"
          dir="auto"
          style={
            Object {
              "marginLeft": "12px",
            }
          }
        >
          Info
        </div>
      </div>
      <div
        className="css-view-g5y9jx r-transitionProperty-1i6wzkk r-userSelect-lrvibr r-cursor-1loqt21 r-touchAction-1otgn73 r-alignItems-1awozwy r-alignSelf-k200y r-borderRadius-z2wwpe r-flexDirection-18u37iz r-flexWrap-tzz3ar r-height-eu3ka r-justifyContent-1777fci r-maxHeight-yca7ao r-minHeight-ero68b r-paddingBlock-11f147o r-paddingLeft-f727ji r-paddingRight-i023vh r-backgroundColor-1niwhzg r-borderColor-ql2gnw r-borderStyle-1phboty r-borderWidth-rs99b7"
        dir={null}
        onClick={[Function]}
        onContextMenu={[Function]}
        onKeyDown={[Function]}
        style={
          Object {
            "marginLeft": "2px",
            "marginRight": "2px",
            "transitionDuration": "0s",
          }
        }
        tabIndex="0"
      >
        <div
          className="css-view-g5y9jx r-borderRadius-18c69zk r-height-1472mwg r-overflow-1udh08x r-width-lrsllp"
          dir={null}
        >
          <div
            className="css-view-g5y9jx r-flexBasis-1mlwlqe r-overflow-1udh08x r-zIndex-417010"
            dir={null}
            style={
              Object {
                "height": "24px",
                "width": "24px",
              }
            }
          >
            <div
              className="css-view-g5y9jx r-backgroundColor-1niwhzg r-backgroundPosition-vvn4in r-backgroundRepeat-u6sd8q r-bottom-1p0dtai r-height-1pi2tsx r-left-1d2f490 r-position-u8s1d r-right-zchlnj r-top-ipm5af r-width-13qz1uu r-zIndex-1wyyakw r-backgroundSize-4gszlv"
              dir={null}
              suppressHydrationWarning={true}
            />
          </div>
        </div>
        <div
          className="css-text-146c3p1 r-maxWidth-dnmrzs r-overflow-1udh08x r-textOverflow-1udbk01 r-whiteSpace-3s2u2q r-wordWrap-1iln25a r-alignSelf-1kihuf0 r-flexWrap-tzz3ar r-fontFamily-1k9400p r-fontSize-1b43r93 r-letterSpacing-1smd7e2 r-lineHeight-1cwl3u0 r-margin-crgep1 r-paddingBlock-1mkv55d r-paddingInline-1e084wi r-color-hiecfz"
          dir="auto"
          style={
            Object {
              "marginLeft": "12px",
            }
          }
        >
          Picture
        </div>
      </div>
      <div
        className="css-view-g5y9jx"
        dir={null}
      >
        <div
          className="css-view-g5y9jx r-transitionProperty-1i6wzkk r-userSelect-lrvibr r-cursor-1loqt21 r-touchAction-1otgn73 r-alignItems-1awozwy r-alignSelf-k200y r-borderRadius-z2wwpe r-flexDirection-18u37iz r-flexWrap-tzz3ar r-height-eu3ka r-justifyContent-1777fci r-maxHeight-yca7ao r-minHeight-ero68b r-paddingBlock-11f147o r-paddingLeft-f727ji r-paddingRight-i023vh r-backgroundColor-1niwhzg r-borderColor-ql2gnw r-borderStyle-1phboty r-borderWidth-rs99b7"
          dir={null}
          onClick={[Function]}
          onContextMenu={[Function]}
          onKeyDown={[Function]}
          style={
            Object {
              "marginLeft": "2px",
              "marginRight": "2px",
              "transitionDuration": "0s",
            }
          }
          tabIndex="0"
        >
          <div
            className="css-view-g5y9jx"
            dir={null}
          >
            <div
              className="css-text-146c3p1"
              dir="auto"
              style={
                Object {
                  "color": "rgba(138,148,166,1.00)",
                  "fontFamily": "alldone",
                  "fontSize": "24px",
                  "opacity": 1,
                }
              }
            >
              
            </div>
          </div>
          <div
            className="css-text-146c3p1 r-maxWidth-dnmrzs r-overflow-1udh08x r-textOverflow-1udbk01 r-whiteSpace-3s2u2q r-wordWrap-1iln25a r-alignSelf-1kihuf0 r-flexWrap-tzz3ar r-fontFamily-1k9400p r-fontSize-1b43r93 r-letterSpacing-1smd7e2 r-lineHeight-1cwl3u0 r-margin-crgep1 r-paddingBlock-1mkv55d r-paddingInline-1e084wi r-color-hiecfz"
            dir="auto"
            style={
              Object {
                "marginLeft": "12px",
              }
            }
          >
            Comment
          </div>
        </div>
      </div>
      <div
        className="css-view-g5y9jx r-transitionProperty-1i6wzkk r-userSelect-lrvibr r-cursor-1loqt21 r-touchAction-1otgn73 r-alignItems-1awozwy r-alignSelf-k200y r-borderRadius-z2wwpe r-flexDirection-18u37iz r-flexWrap-tzz3ar r-height-eu3ka r-justifyContent-1777fci r-maxHeight-yca7ao r-minHeight-ero68b r-paddingBlock-11f147o r-paddingLeft-f727ji r-paddingRight-i023vh r-backgroundColor-1niwhzg r-borderColor-ql2gnw r-borderStyle-1phboty r-borderWidth-rs99b7"
        dir={null}
        onClick={[Function]}
        onContextMenu={[Function]}
        onKeyDown={[Function]}
        style={
          Object {
            "marginLeft": "2px",
            "marginRight": "2px",
            "transitionDuration": "0s",
          }
        }
        tabIndex="0"
      >
        <div
          className="css-view-g5y9jx"
          dir={null}
        >
          <div
            className="css-text-146c3p1"
            dir="auto"
            style={
              Object {
                "color": "rgba(138,148,166,1.00)",
                "fontFamily": "alldone",
                "fontSize": "24px",
                "opacity": 1,
              }
            }
          >
            
          </div>
        </div>
        <div
          className="css-text-146c3p1 r-maxWidth-dnmrzs r-overflow-1udh08x r-textOverflow-1udbk01 r-whiteSpace-3s2u2q r-wordWrap-1iln25a r-alignSelf-1kihuf0 r-flexWrap-tzz3ar r-fontFamily-1k9400p r-fontSize-1b43r93 r-letterSpacing-1smd7e2 r-lineHeight-1cwl3u0 r-margin-crgep1 r-paddingBlock-1mkv55d r-paddingInline-1e084wi r-color-hiecfz"
          dir="auto"
          style={
            Object {
              "marginLeft": "12px",
            }
          }
        >
          None
        </div>
      </div>
      <div
        className="css-view-g5y9jx"
        dir={null}
      >
        <div
          className="css-view-g5y9jx r-transitionProperty-1i6wzkk r-userSelect-lrvibr r-cursor-1loqt21 r-touchAction-1otgn73 r-alignItems-1awozwy r-alignSelf-k200y r-borderRadius-z2wwpe r-flexDirection-18u37iz r-flexWrap-tzz3ar r-height-eu3ka r-justifyContent-1777fci r-maxHeight-yca7ao r-minHeight-ero68b r-paddingBlock-11f147o r-backgroundColor-1niwhzg r-borderColor-ql2gnw r-borderStyle-1phboty r-borderWidth-rs99b7 r-paddingLeft-1m04atk r-paddingRight-1pyaxff"
          dir={null}
          onClick={[Function]}
          onContextMenu={[Function]}
          onKeyDown={[Function]}
          style={
            Object {
              "marginLeft": "2px",
              "marginRight": "2px",
              "transitionDuration": "0s",
            }
          }
          tabIndex="0"
        >
          <div
            className="css-view-g5y9jx"
            dir={null}
          >
            <div
              className="css-text-146c3p1"
              dir="auto"
              style={
                Object {
                  "color": "rgba(138,148,166,1.00)",
                  "fontFamily": "alldone",
                  "fontSize": "24px",
                  "opacity": 1,
                }
              }
            >
              
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="css-view-g5y9jx r-flexDirection-18u37iz r-flexGrow-16y2uox r-justifyContent-17s6mgv"
      dir={null}
    >
      <div
        className="css-view-g5y9jx r-transitionProperty-1i6wzkk r-userSelect-lrvibr r-cursor-1loqt21 r-touchAction-1otgn73 r-alignItems-1awozwy r-alignSelf-k200y r-borderRadius-z2wwpe r-flexDirection-18u37iz r-flexWrap-tzz3ar r-height-eu3ka r-justifyContent-1777fci r-maxHeight-yca7ao r-minHeight-ero68b r-paddingBlock-11f147o r-backgroundColor-1uxh0fu r-paddingLeft-1qhn6m8 r-paddingRight-i023vh"
        dir={null}
        onClick={[Function]}
        onContextMenu={[Function]}
        onKeyDown={[Function]}
        style={
          Object {
            "marginLeft": "4px",
            "marginRight": "4px",
            "transitionDuration": "0s",
          }
        }
        tabIndex="0"
      >
        <div
          className="css-text-146c3p1 r-maxWidth-dnmrzs r-overflow-1udh08x r-textOverflow-1udbk01 r-whiteSpace-3s2u2q r-wordWrap-1iln25a r-alignSelf-1kihuf0 r-flexWrap-tzz3ar r-fontFamily-1k9400p r-fontSize-1b43r93 r-letterSpacing-1smd7e2 r-lineHeight-1cwl3u0 r-margin-crgep1 r-paddingBlock-1mkv55d r-paddingInline-1e084wi r-color-qmo3aw"
          dir="auto"
          style={
            Object {
              "marginLeft": "0px",
            }
          }
        >
          Cancel
        </div>
      </div>
      <div
        className="css-view-g5y9jx r-transitionProperty-1i6wzkk r-userSelect-lrvibr r-cursor-1loqt21 r-touchAction-1otgn73 r-alignItems-1awozwy r-alignSelf-k200y r-borderRadius-z2wwpe r-flexDirection-18u37iz r-flexWrap-tzz3ar r-height-eu3ka r-justifyContent-1777fci r-maxHeight-yca7ao r-minHeight-ero68b r-paddingBlock-11f147o r-backgroundColor-t6fudj r-paddingLeft-1qhn6m8 r-paddingRight-i023vh"
        dir={null}
        onClick={[Function]}
        onContextMenu={[Function]}
        onKeyDown={[Function]}
        style={
          Object {
            "transitionDuration": "0s",
          }
        }
        tabIndex="0"
      >
        <div
          className="css-text-146c3p1 r-maxWidth-dnmrzs r-overflow-1udh08x r-textOverflow-1udbk01 r-whiteSpace-3s2u2q r-wordWrap-1iln25a r-alignSelf-1kihuf0 r-flexWrap-tzz3ar r-fontFamily-1k9400p r-fontSize-1b43r93 r-letterSpacing-1smd7e2 r-lineHeight-1cwl3u0 r-margin-crgep1 r-paddingBlock-1mkv55d r-paddingInline-1e084wi r-color-jwli3a"
          dir="auto"
          style={
            Object {
              "marginLeft": "0px",
            }
          }
        >
          Ok
        </div>
      </div>
    </div>
  </div>
</div>
`;
